--- a/blogpost.html
+++ b/blogpost.html
@@ -6,9 +6,11 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                cabecera
-            <div id="post">
-        <h1>Este es el titulo atractivo e interesante del post</h1>
+                Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
+        </div>
+        <div id="post">
+            <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
        </div>
     </div>
